feat : 브랜드 응답에 영문명 추가
- 브랜드 화면이 한글명 아래 영문명을 함께 보여줌
- 필드마다 설명을 붙여 문서에 노출
